--- a/client/src/components/Teams.css
+++ b/client/src/components/Teams.css
@@ -65,13 +65,14 @@
   }
   .carousel .card {
     scroll-snap-align: start;
-    height: 642px;
+    height: 662px;
     list-style: none;
     background: #fff;
     cursor: pointer;
     padding-bottom: 15px;
     flex-direction: column;
     border-radius: 8px;
+    display: flex; 
   }
   .carousel .card .img {
     background: #6391FF;
@@ -89,12 +90,18 @@
   .carousel .card h2 {
     font-weight: 500;
     font-size: 1.56rem;
-    margin: 30px 0 5px;
+    margin: 20px 0 5px;
   }
   .carousel .card span {
     color: #6a6d78;
     font-size: 1.31rem;
+    padding-top: 8px;
   }
+  .carousel .card .subtitle {
+    display: block; 
+    font-size: 1.31rem;
+    margin-top: 5px; 
+    }
   @media screen and (max-width: 900px) {
     .wrapper .carousel {
       grid-auto-columns: calc((100% / 2) - 9px);
