--- a/client/src/components/Teams.css
+++ b/client/src/components/Teams.css
@@ -10,7 +10,7 @@
     position: relative;
   }
   .wrapper .arrow-icon {
-    top: 50%;
+    top: 20%;
     height: 40px;
     width: 40px;
     cursor: pointer;
@@ -65,24 +65,25 @@
   }
   .carousel .card {
     scroll-snap-align: start;
-    height: 662px;
+    height: 462px;
     list-style: none;
     background: #fff;
     cursor: pointer;
     padding-bottom: 15px;
     flex-direction: column;
+    justify-content: space-between; 
     border-radius: 8px;
     display: flex; 
   }
   .carousel .card .img {
     background: #6391FF;
-    height: 200px;
-    width: 200px;
+    height: 180px;
+    width: 180px;
     border-radius: 15%;
   }
   .card .img img {
-    width: 192px;
-    height: 192px;
+    width: 170px;
+    height: 170px;
     border-radius: 15%;
     object-fit: cover;
     border: 4px solid #fff;
@@ -100,7 +101,10 @@
   .carousel .card .subtitle {
     display: block; 
     font-size: 1.31rem;
-    margin-top: 5px; 
+    margin-top: 1px; 
+    }
+    .carousel .card .subtitle-container {
+      flex: 1; 
     }
   @media screen and (max-width: 900px) {
     .wrapper .carousel {
